fixed z-index

--- a/assets/sass/pages/_home-page.scss
+++ b/assets/sass/pages/_home-page.scss
@@ -299,7 +299,7 @@
           position: absolute;
           left: 100%;
           top: 0;
-          z-index: 1;
+          z-index: 33;
           padding-left: 35px;
           width: 500px;
         }
@@ -326,7 +326,7 @@
           position: absolute;
           left: 115px;
           top: 100%;
-          z-index: 1;
+          z-index: 33;
           padding-top: 5px;
           width: 100%;
         }
@@ -349,7 +349,7 @@
           transform: translateX(-50%);
           left: 50%;
           top: 100%;
-          z-index: 1;
+          z-index: 33;
           padding-top: 15px;
           width: 300px;
           text-align: center;
@@ -377,7 +377,7 @@
           transform: translateX(-50%);
           right: 0;
           top: 100%;
-          z-index: 1;
+          z-index: 33;
           padding-top: 15px;
           width: 100%;
           text-align: right;
@@ -392,7 +392,6 @@
 
     &__description {
       display: none;
-      z-index: 33;
     }
   }
 }
