--- a/style.css
+++ b/style.css
@@ -11729,7 +11729,7 @@ select {
     position: absolute;
     left: 100%;
     top: 0;
-    z-index: 1;
+    z-index: 33;
     padding-left: 35px;
     width: 500px;
   }
@@ -11756,7 +11756,7 @@ select {
     position: absolute;
     left: 115px;
     top: 100%;
-    z-index: 1;
+    z-index: 33;
     padding-top: 5px;
     width: 100%;
   }
@@ -11778,7 +11778,7 @@ select {
     transform: translateX(-50%);
     left: 50%;
     top: 100%;
-    z-index: 1;
+    z-index: 33;
     padding-top: 15px;
     width: 300px;
     text-align: center;
@@ -11807,7 +11807,7 @@ select {
     transform: translateX(-50%);
     right: 0;
     top: 100%;
-    z-index: 1;
+    z-index: 33;
     padding-top: 15px;
     width: 100%;
     text-align: right;
@@ -11818,7 +11818,6 @@ select {
   }
   .order-info__description {
     display: none;
-    z-index: 33;
   }
 }
 
